Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-4181

Windows command line crash

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 5.5.29
    • 5.5.30
    • None
    • Windows only

    Description

      When I mess up an sql statement the command line client goes berserk.
      Steps to reproduce.
      1. Open a windows command line.
      2. cd to the location of mysql.exe
      3. run mysql.exe
      4. type an invalid command like "show tables;" without selecting a database first.

      At this point I have to reboot.

      Attachments

        Activity

          People

            wlad Vladislav Vaintroub
            jeff.sadowski@gmail.com Jeff Sadowski
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 3h
                3h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.